--- a/clients/apple2020/Lockbook.xcodeproj/xcshareddata/xcschemes/Lockbook (iOS).xcscheme
+++ b/clients/apple2020/Lockbook.xcodeproj/xcshareddata/xcschemes/Lockbook (iOS).xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1160"
+   LastUpgradeVersion = "1220"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,24 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "SwiftLockbookCore"
-               BuildableName = "SwiftLockbookCore"
-               BlueprintName = "SwiftLockbookCore"
-               ReferencedContainer = "container:">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "SwiftLockbookCoreTests"
-               BuildableName = "SwiftLockbookCoreTests"
-               BlueprintName = "SwiftLockbookCoreTests"
-               ReferencedContainer = "container:">
+               BlueprintIdentifier = "EA5C7D6E2516606000F7F358"
+               BuildableName = "Lockbook.app"
+               BlueprintName = "Lockbook (iOS)"
+               ReferencedContainer = "container:Lockbook.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -42,16 +28,6 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "SwiftLockbookCoreTests"
-               BuildableName = "SwiftLockbookCoreTests"
-               BlueprintName = "SwiftLockbookCoreTests"
-               ReferencedContainer = "container:">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -64,6 +40,33 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "EA5C7D6E2516606000F7F358"
+            BuildableName = "Lockbook.app"
+            BlueprintName = "Lockbook (iOS)"
+            ReferencedContainer = "container:Lockbook.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "LOCKBOOK_NO_COLOR"
+            value = "1"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "LOCKBOOK_DEBUG"
+            value = "1"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "LOCKBOOK_NO_COLOR"
+            value = "1"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -71,15 +74,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "SwiftLockbookCore"
-            BuildableName = "SwiftLockbookCore"
-            BlueprintName = "SwiftLockbookCore"
-            ReferencedContainer = "container:">
+            BlueprintIdentifier = "EA5C7D6E2516606000F7F358"
+            BuildableName = "Lockbook.app"
+            BlueprintName = "Lockbook (iOS)"
+            ReferencedContainer = "container:Lockbook.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
