--- a/clients/apple2020/Lockbook.xcodeproj/xcshareddata/xcschemes/Lockbook (macOS).xcscheme
+++ b/clients/apple2020/Lockbook.xcodeproj/xcshareddata/xcschemes/Lockbook (macOS).xcscheme
@@ -54,7 +54,7 @@
          <EnvironmentVariable
             key = "LOCKBOOK_DEBUG"
             value = "1"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </EnvironmentVariable>
          <EnvironmentVariable
             key = "LOCKBOOK_NO_COLOR"
