rotating sync indicator, flip toggler, background sync, improving some structural items

--- a/clients/apple/lockbook.xcodeproj/xcshareddata/xcschemes/Lockbook (macOS).xcscheme
+++ b/clients/apple/lockbook.xcodeproj/xcshareddata/xcschemes/Lockbook (macOS).xcscheme
@@ -54,7 +54,7 @@
          <EnvironmentVariable
             key = "LOCKBOOK_DEBUG"
             value = "1"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </EnvironmentVariable>
          <EnvironmentVariable
             key = "LOCKBOOK_NO_COLOR"
