adding usage to c-lib and Swift wrapper

--- a/clients/apple/SwiftLockbookCore/.swiftpm/xcode/xcshareddata/xcschemes/SwiftLockbookCore.xcscheme
+++ b/clients/apple/SwiftLockbookCore/.swiftpm/xcode/xcshareddata/xcschemes/SwiftLockbookCore.xcscheme
@@ -51,6 +51,11 @@
                BlueprintName = "SwiftLockbookCoreTests"
                ReferencedContainer = "container:">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "SwiftLockbookCoreTests/test10FfiPerformance()">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
    </TestAction>
