adding log path to integration test env

--- a/containers/test.env
+++ b/containers/test.env
@@ -17,4 +17,5 @@ SERVER_SCHEME=http
 SERVER_HOST=lockbook_server
 SERVER_PORT=8000
 MAX_AUTH_DELAY=20000
-RUST_LOG=info
+LOG_LEVEL=info
+LOG_PATH=$(pwd)
