API_URL configured by environment variable at run time instead of at compile

--- a/clients/apple/lockbook.xcodeproj/xcshareddata/xcschemes/Lockbook (iOS).xcscheme
+++ b/clients/apple/lockbook.xcodeproj/xcshareddata/xcschemes/Lockbook (iOS).xcscheme
@@ -52,13 +52,18 @@
       </BuildableProductRunnable>
       <EnvironmentVariables>
          <EnvironmentVariable
-            key = "LOCKBOOK_NO_COLOR"
+            key = "LOG_LEVEL"
+            value = "debug"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "LOG_NO_COLOR"
             value = "1"
             isEnabled = "YES">
          </EnvironmentVariable>
          <EnvironmentVariable
-            key = "LOCKBOOK_DEBUG"
-            value = "1"
+            key = "API_URL"
+            value = "http://localhost:8000"
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
