--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -19,4 +19,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.44"
 tokio = { version = "0.2.18", features = ["full"] }
 tokio-postgres = { version = "0.5.4", features = ["with-chrono-0_4"] }
+tokio-test = "0.2.1"
 uuid = { version = "0.8.1", features = ["v4", "serde"] }
