--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Build container
       run: make server
     - name: Compile and run tests
-      run: make server_tests_run
+      run: make server_test
     - name: Check Formatting
       run: make server_fmt
     - name: Lint
@@ -85,6 +85,19 @@ jobs:
       run: make integration_tests
     - name: Compile and run tests
       run: make integration_tests_run
+  Server-Integration-Tests:
+    runs-on: self-hosted
+    env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      BRANCH: ${{ github.head_ref }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build server container
+        run: make server
+      - name: Build test container
+        run: make server_tests
+      - name: Compile and run tests
+        run: make server_tests_run
   Kotlin-Interface-Tests:
     runs-on: self-hosted
     env:
