--- a/clients/windows/test/test.csproj
+++ b/clients/windows/test/test.csproj
@@ -9,6 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="lockbook_core.dll" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="lockbook_core.dll" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.0" />
