swift deriving API Location from appropriate sources

--- a/clients/apple/iOS/Info.plist
+++ b/clients/apple/iOS/Info.plist
@@ -41,6 +41,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>API_LOCATION</key>
+	<string>${API_LOCATION}</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
