--- a/clients/apple/SwiftLockbookCore/.swiftpm/xcode/xcshareddata/xcschemes/SwiftLockbookCore.xcscheme
+++ b/clients/apple/SwiftLockbookCore/.swiftpm/xcode/xcshareddata/xcschemes/SwiftLockbookCore.xcscheme
@@ -69,6 +69,13 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "API_URL"
+            value = "http://qa.lockbook.app:8000"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
