--- a/clients/apple/macOS/Info.plist
+++ b/clients/apple/macOS/Info.plist
@@ -24,5 +24,7 @@
 	<string>public.app-category.productivity</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
+	<key>API_LOCATION</key>
+	<string>${API_LOCATION}</string>
 </dict>
 </plist>
