--- a/clients/apple/SwiftLockbookCore/.swiftpm/xcode/xcshareddata/xcschemes/SwiftLockbookCore.xcscheme
+++ b/clients/apple/SwiftLockbookCore/.swiftpm/xcode/xcshareddata/xcschemes/SwiftLockbookCore.xcscheme
@@ -72,7 +72,7 @@
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "API_URL"
-            value = "http://qa.lockbook.app:8000"
+            value = "http://nyx:69"
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
