adding linux spec gen to swift interface test

--- a/containers/docker-compose-swift-interface-tests.yml
+++ b/containers/docker-compose-swift-interface-tests.yml
@@ -66,5 +66,6 @@ services:
     entrypoint: >
       /bin/sh -c '\
         sleep 5 && \
+        swift test --generate-linuxmain \
         swift test \
       '
