--- a/containers/docker-compose-swift-interface-tests.yml
+++ b/containers/docker-compose-swift-interface-tests.yml
@@ -53,7 +53,7 @@ services:
     entrypoint: >
       /bin/sh -c '\
         sleep 5 && \
-        RUST_LOG=lockbook_server=debug cargo run \
+        RUST_LOG=lockbook_server=debug cargo run
       '
 
   swift_interface_tests:
@@ -66,6 +66,5 @@ services:
     entrypoint: >
       /bin/sh -c '\
         sleep 5 && \
-        swift test --generate-linuxmain \
-        swift test \
+        swift test
       '
