better configured lockbook location

--- a/clients/apple/lockbook.xcodeproj/xcshareddata/xcschemes/Lockbook (iOS).xcscheme
+++ b/clients/apple/lockbook.xcodeproj/xcshareddata/xcschemes/Lockbook (iOS).xcscheme
@@ -57,6 +57,11 @@
             isEnabled = "YES">
          </EnvironmentVariable>
          <EnvironmentVariable
+            key = "LOCKBOOK_LOCATION"
+            value = "/tmp/lockbook_ios"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
             key = "LOCKBOOK_DEBUG"
             value = "1"
             isEnabled = "YES">
