--- a/containers/docker-compose-performance.yml
+++ b/containers/docker-compose-performance.yml
@@ -11,5 +11,6 @@ services:
     entrypoint: >
       /bin/sh -c '\
         sleep 5 && \
-        LOCKBOOK_DEBUG=1 cargo bench -- --profile-time 5 \
+        LOCKBOOK_DEBUG=1 cargo bench -- --profile-time 5 && \
+        pprof --svg $$(find . -type f -executable -name "performator-*") target/criterion/simple/create_write_read/profile/simple-create_write_read.profile > simple-create_write_read.svg \
       '
