--- a/clients/linux/Cargo.toml
+++ b/clients/linux/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 lockbook_core = { path = "../../core" }
 gdk = "0.13.2"
+gdk-pixbuf = "0.9.0"
 glib = "0.10"
 gtk = { version = "0.9.0", features = ["v3_16"] }
 gio = { version = "", features = ["v2_44"] }
