--- a/containers/docker-compose-integration-tests.yml
+++ b/containers/docker-compose-integration-tests.yml
@@ -53,7 +53,7 @@ services:
     entrypoint: >
       /bin/sh -c '\
         sleep 5 && \
-        RUST_LOG=lockbook_server=debug cargo run --release \
+        RUST_LOG=lockbook_server=debug ./target/release/lockbook-server \
       '
 
   integration_tests:
