--- a/containers/docker-compose-kotlin-interface-tests.yml
+++ b/containers/docker-compose-kotlin-interface-tests.yml
@@ -54,7 +54,7 @@ services:
     entrypoint: >
       /bin/sh -c '\
         sleep 5 && \
-        RUST_LOG=lockbook_server=debug cargo run --release \
+        RUST_LOG=lockbook_server=debug ./target/release/lockbook-server \
       '
 
   kotlin_interface_tests:
