--- a/containers/Dockerfile.linux
+++ b/containers/Dockerfile.linux
@@ -1,7 +1,7 @@
 FROM ubuntu:20.10
 
 RUN apt update -y
-RUN apt-get install -y build-essential curl libgtk-3-dev
+RUN apt-get install -y build-essential curl libgtk-3-dev gtksourceview-3.0
 RUN curl https://sh.rustup.rs -sSf | bash -s -- -y
 RUN apt update -y
 ENV PATH="/root/.cargo/bin:${PATH}"
