--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -20,6 +20,7 @@ chrono = "0.4.15"
 diffy = "0.2.0"
 fern = { version = "0.6.0", features = ["colored"]}
 jni = { version = "0.13.1", default-features = false }
+lockbook_models = { path = "../models" }
 log = "0.4.8"
 rand = "0.7"
 reqwest = { version = "0.10.6", default-features = false, features = ["rustls-tls", "blocking", "json"] }
