--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,7 +9,7 @@ base64 = "0.11.0"
 chrono = "0.4.15"
 fern = { version = "0.6.0", features = ["colored"]}
 hyper = "0.13.5"
-lockbook_core = { path = "../core" }
+lockbook_models = { path = "../models" }
 log = "0.4.8"
 openssl = { version = "0.10", features = ["vendored"] }
 postgres-openssl = "0.3.0"
