--- a/containers/Dockerfile.cli
+++ b/containers/Dockerfile.cli
@@ -6,6 +6,7 @@ RUN rustup component add clippy --toolchain stable
 WORKDIR cli
 
 # CLI depends on core via a relative import
+COPY models ../models
 COPY core ../core
 # Required to get cargo to get and compile deps but not our source
 # https://blog.mgattozzi.dev/caching-rust-docker-builds/
