--- a/containers/Dockerfile.core
+++ b/containers/Dockerfile.core
@@ -5,6 +5,7 @@ RUN rustup component add rustfmt --toolchain stable
 RUN rustup component add clippy --toolchain stable
 WORKDIR core
 
+COPY models ../models
 # Required to get cargo to get and compile deps but not our source
 # https://blog.mgattozzi.dev/caching-rust-docker-builds/
 COPY containers/dummy.rs src/lib.rs
