--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -10,12 +10,12 @@ on:
 
 jobs:
   Clean:
-    runs-on: self-hosted
+    runs-on: [self-hosted, dockerized]
     steps:
     - name: Clean
       run: make clean
   Core:
-    runs-on: self-hosted
+    runs-on: [self-hosted, dockerized]
     needs: Clean
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -31,7 +31,7 @@ jobs:
     - name: Lint
       run: make core_lint
   Cli:
-    runs-on: self-hosted
+    runs-on: [self-hosted, dockerized]
     needs: Core
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -47,7 +47,7 @@ jobs:
     - name: Lint
       run: make cli_lint
   Linux:
-    runs-on: self-hosted
+    runs-on: [self-hosted, dockerized]
     needs: Core
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -63,7 +63,7 @@ jobs:
     - name: Compile and run tests
       run: make linux_test
   Android:
-    runs-on: self-hosted
+    runs-on: [self-hosted, dockerized]
     needs: Core
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -77,7 +77,7 @@ jobs:
       - name: Lint
         run: make android_lint
   Integration-Tests:
-    runs-on: self-hosted
+    runs-on: [self-hosted, dockerized]
     needs: Core
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -91,7 +91,7 @@ jobs:
     - name: Compile and run tests
       run: make integration_tests_run
   Server-Integration-Tests:
-    runs-on: self-hosted
+    runs-on: [self-hosted, dockerized]
     needs: Core
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -105,7 +105,7 @@ jobs:
       - name: Compile and run tests
         run: make server_tests_run
   Kotlin-Interface-Tests:
-    runs-on: self-hosted
+    runs-on: [self-hosted, dockerized]
     needs: Core
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -119,7 +119,7 @@ jobs:
     - name: Compile and run tests
       run: make kotlin_interface_tests_run
   Swift-Interface-Tests:
-    runs-on: self-hosted
+    runs-on: [self-hosted, dockerized]
     needs: Core
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -133,7 +133,7 @@ jobs:
       - name: Compile and run tests
         run: make swift_interface_tests_run
   CSharp-Interface-Tests:
-    runs-on: self-hosted
+    runs-on: [self-hosted, dockerized]
     needs: Core
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
