--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   Reports:
-    runs-on: self-hosted
+    runs-on: [self-hosted, dockerized]
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       BRANCH: ${{ github.head_ref }}
