--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -9,140 +9,8 @@ on:
     branches: [ master ]
 
 jobs:
-  Clean:
+  ReallyClean:
     runs-on: [self-hosted, dockerized]
     steps:
     - name: Clean
-      run: make clean
-  Core:
-    runs-on: [self-hosted, dockerized]
-    needs: Clean
-    env:
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      BRANCH: ${{ github.head_ref }}
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build container
-      run: make core
-    - name: Compile and run tests
-      run: make core_test
-    - name: Check Formatting
-      run: make core_fmt
-    - name: Lint
-      run: make core_lint
-  Cli:
-    runs-on: [self-hosted, dockerized]
-    needs: Core
-    env:
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      BRANCH: ${{ github.head_ref }}
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build container
-      run: make cli
-    - name: Compile and run tests
-      run: make cli_test
-    - name: Check Formatting
-      run: make cli_fmt
-    - name: Lint
-      run: make cli_lint
-  Linux:
-    runs-on: [self-hosted, dockerized]
-    needs: Core
-    env:
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      BRANCH: ${{ github.head_ref }}
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build container
-      run: make linux
-    - name: Check Formatting
-      run: make linux_fmt
-    - name: Lint
-      run: make linux_lint
-    - name: Compile and run tests
-      run: make linux_test
-  Android:
-    runs-on: [self-hosted, dockerized]
-    needs: Core
-    env:
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      BRANCH: ${{ github.head_ref }}
-    steps:
-      - uses: actions/checkout@v2
-      - name: Build container
-        run: make android
-      - name: Check Formatting
-        run: make android_fmt
-      - name: Lint
-        run: make android_lint
-  Integration-Tests:
-    runs-on: [self-hosted, dockerized]
-    needs: Core
-    env:
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      BRANCH: ${{ github.head_ref }}
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build server container
-      run: make server
-    - name: Build test container
-      run: make integration_tests
-    - name: Compile and run tests
-      run: make integration_tests_run
-  Server-Integration-Tests:
-    runs-on: [self-hosted, dockerized]
-    needs: Core
-    env:
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      BRANCH: ${{ github.head_ref }}
-    steps:
-      - uses: actions/checkout@v2
-      - name: Build server container
-        run: make server
-      - name: Build test container
-        run: make server_tests
-      - name: Compile and run tests
-        run: make server_tests_run
-  Kotlin-Interface-Tests:
-    runs-on: [self-hosted, dockerized]
-    needs: Core
-    env:
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      BRANCH: ${{ github.head_ref }}
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build server container
-      run: make server
-    - name: Build test container
-      run: make kotlin_interface_tests
-    - name: Compile and run tests
-      run: make kotlin_interface_tests_run
-  Swift-Interface-Tests:
-    runs-on: [self-hosted, dockerized]
-    needs: Core
-    env:
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      BRANCH: ${{ github.head_ref }}
-    steps:
-      - uses: actions/checkout@v2
-      - name: Build server container
-        run: make server
-      - name: Build test container
-        run: make swift_interface_tests
-      - name: Compile and run tests
-        run: make swift_interface_tests_run
-  CSharp-Interface-Tests:
-    runs-on: [self-hosted, dockerized]
-    needs: Core
-    env:
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      BRANCH: ${{ github.head_ref }}
-    steps:
-      - uses: actions/checkout@v2
-      - name: Build server container
-        run: make server
-      - name: Build test container
-        run: make csharp_interface_tests
-      - name: Compile and run tests
-        run: make csharp_interface_tests_run
+      run: make exorcise
