--- a/clients/android/app/build.gradle
+++ b/clients/android/app/build.gradle
@@ -106,6 +106,7 @@ dependencies {
     implementation "com.jakewharton.timber:timber:$logger_version"
     implementation "androidx.work:work-runtime-ktx:$work_version"
     implementation "com.github.tingyik90:snackprogressbar:$snackprogressbar_version"
+    implementation "com.github.adrielcafe:krumbsview:$breadcrumbs_version"
 
     implementation project(':core')
 }
