--- a/clients/android/build.gradle
+++ b/clients/android/build.gradle
@@ -28,6 +28,7 @@ buildscript {
         work_version = '2.4.0'
         kotlinter_version = '3.0.2'
         snackprogressbar_version = '6.4.2'
+        breadcrumbs_version = '1.1.4'
     }
 
     repositories {
