--- a/clients/cli/Cargo.toml
+++ b/clients/cli/Cargo.toml
@@ -11,6 +11,6 @@ structopt = "0.3.13"
 uuid = "0.8"
 serde_json = "1.0.44"
 chrono = "0.4"
-chrono-human-duration = "0.1.1"
+basic-human-duration = "0.1.2"
 qr2term = "0.2.1"
 atty = "0.2"
