--- a/containers/docker-compose-integration-tests.yml
+++ b/containers/docker-compose-integration-tests.yml
@@ -28,14 +28,12 @@ services:
     environment:
       - POSTGRES_HOST_AUTH_METHOD=trust
   config_indexdb:
-    image: postgres:12.3
+    image: db_with_migration-$HASH
     container_name: config_indexdb-integration-$HASH
     env_file:
       - ../containers/test.env
     depends_on:
       - indexdb
-    volumes:
-      - $PWD/index_db:/index_db
     entrypoint: >
       /bin/sh -c '\
         while ! pg_isready -h $$INDEX_DB_HOST -p $$INDEX_DB_PORT -U $$INDEX_DB_USER; do echo "Waiting for Postgres to start..." && sleep 0.2; done; \
