--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -175,6 +175,6 @@ jobs:
       - name: Tear Down Stack
         run: make kill_dev_stack
         if: always()
-      - name: Tear Down Stack
-        run: make kill_dev_stack
+      - name: Cleanup Stale Things
+        run: make clean
         if: always()
