spin up the dev stack first to prevent race conditions

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -85,7 +85,7 @@ jobs:
       - name: Lint
         run: make server_lint
 
-  Integration-Test-Containers:
+  Prep Integration Tests:
     runs-on: [self-hosted, dockerized]
     needs: Server
     env:
@@ -103,6 +103,10 @@ jobs:
       run: make csharp_interface_tests
     - name: Swift
       run: make swift_interface_tests
+    - name: DB Config Image
+      run: make db_container
+    - name: Spin up dev stack
+      run: make dev_stack_run
 
   Core-Server-Db:
     runs-on: [self-hosted, dockerized]
