--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -110,7 +110,7 @@ jobs:
 
   Core-Server-Db:
     runs-on: [self-hosted, dockerized]
-    needs: Integration-Test-Containers
+    needs: Prep-Integration-Tests
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       BRANCH: ${{ github.head_ref }}
@@ -122,7 +122,7 @@ jobs:
 
   Server-DB:
     runs-on: [self-hosted, dockerized]
-    needs: Integration-Test-Containers
+    needs: Prep-Integration-Tests
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       BRANCH: ${{ github.head_ref }}
@@ -134,7 +134,7 @@ jobs:
 
   Kotlin-Core:
     runs-on: [self-hosted, dockerized]
-    needs: Integration-Test-Containers
+    needs: Prep-Integration-Tests
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       BRANCH: ${{ github.head_ref }}
@@ -146,7 +146,7 @@ jobs:
 
   Swift-Core:
     runs-on: [self-hosted, dockerized]
-    needs: Integration-Test-Containers
+    needs: Prep-Integration-Tests
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       BRANCH: ${{ github.head_ref }}
@@ -158,7 +158,7 @@ jobs:
 
   CSharp-Core:
     runs-on: [self-hosted, dockerized]
-    needs: Integration-Test-Containers
+    needs: Prep-Integration-Tests
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       BRANCH: ${{ github.head_ref }}
