--- a/containers/Dockerfile.csharp_interface_tests
+++ b/containers/Dockerfile.csharp_interface_tests
@@ -1,4 +1,5 @@
-FROM core-build AS csharp-interface-tests
+ARG HASH
+FROM ubuntu:20.04 AS csharp-interface-tests
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Install essentials
@@ -21,10 +22,11 @@ RUN apt-get update
 RUN apt-get install -y dotnet-sdk-3.1
 
 # Copy code
-COPY clients/windows ../clients/windows
-COPY target/release/liblockbook_core.so ../clients/windows/core/
+COPY clients/windows clients/windows
+RUN mkdir -p clients/windows/core/
+COPY --from=core:${HASH} core/target/release/liblockbook_core.so  clients/windows/core
 
 # Build tests
 ENV API_URL=http://lockbook_server:8000
-WORKDIR ../clients/windows/test 
+WORKDIR clients/windows/test 
 RUN dotnet build
