--- a/containers/Dockerfile.cli
+++ b/containers/Dockerfile.cli
@@ -1,3 +1,4 @@
+ARG HASH
 FROM rust AS cli-build
 
 # Use https://rust-lang.github.io/rustup-components-history/ to select one with cargo and rustfmt
@@ -25,15 +26,15 @@ RUN touch src/main.rs
 RUN cargo build --release
 
 # Check formatting
-FROM cli-build AS cli-fmt
+FROM cli:${HASH} AS cli-fmt
 RUN rustup component add rustfmt --toolchain stable
 RUN cargo +stable fmt -- --check -l
 
 # Check lint
-FROM cli-build AS cli-lint
+FROM cli:${HASH} AS cli-lint
 RUN rustup component add clippy --toolchain stable
 RUN cargo +stable clippy -- -D warnings -A clippy::redundant-field-names -A clippy::ptr-arg -A clippy::missing-safety-doc -A clippy::expect-fun-call -A clippy::too-many-arguments
 
 # Run cli tests
-FROM cli-build AS cli-test
+FROM cli:${HASH} AS cli-test
 RUN cargo test --release
