made core a requirement before integration tests

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -87,7 +87,7 @@ jobs:
 
   Prep-Integration-Tests:
     runs-on: [self-hosted, dockerized]
-    needs: Server
+    needs: [Core, Server]
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       BRANCH: ${{ github.head_ref }}
