--- a/containers/Dockerfile.kotlin_interface_tests
+++ b/containers/Dockerfile.kotlin_interface_tests
@@ -1,5 +1,5 @@
 ARG HASH
-FROM ubuntu:20.04  AS kotlin-interface-tests
+FROM core:${HASH}  AS kotlin-interface-tests
 
 ENV ANDROID_HOME /opt/android-sdk-linux
 RUN apt update && apt install -y build-essential openjdk-8-jdk wget curl unzip
@@ -14,17 +14,17 @@ RUN cd /opt \
 ENV PATH ${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/tools/bin:${ANDROID_HOME}/platform-tools
 RUN yes | sdkmanager --licenses
 
-WORKDIR ..
+WORKDIR /
 
 # Copy android in
-COPY clients/android clients/android
-WORKDIR clients/android
+COPY clients/android .
+WORKDIR /android
 
 ENV API_URL=http://lockbook_server:8000
 
 # Move binaries for tests
-RUN mkdir -p core/src/main/jniLibs/desktop
-COPY --from=core:${HASH} core/target/release/liblockbook_core.so  core/src/main/jniLibs/desktop/liblockbook_core.so
+RUN mkdir -p android/core/src/main/jniLibs/desktop
+RUN cp /core/target/release/liblockbook_core.so /android/core/src/main/jniLibs/desktop/liblockbook_core.so
 
 # Build android
 RUN ./gradlew assemble
