--- a/containers/Dockerfile.kotlin_interface_tests
+++ b/containers/Dockerfile.kotlin_interface_tests
@@ -19,14 +19,13 @@ RUN yes | sdkmanager --licenses
 WORKDIR /
 
 # Copy android in
-COPY clients/android .
-WORKDIR /android
-
+COPY clients/android clients/android
 ENV API_URL=http://lockbook_server:8000
 
 # Move binaries for tests
-RUN mkdir -p android/core/src/main/jniLibs/desktop
-RUN cp /core/target/release/liblockbook_core.so /android/core/src/main/jniLibs/desktop/liblockbook_core.so
+RUN mkdir -p /clients/android/core/src/main/jniLibs/desktop
+RUN mv /core/target/release/liblockbook_core.so /clients/android/core/src/main/jniLibs/desktop/liblockbook_core.so
 
 # Build android
+WORKDIR /clients/android
 RUN ./gradlew assemble
