--- a/containers/Dockerfile.server
+++ b/containers/Dockerfile.server
@@ -5,10 +5,13 @@ RUN rustup toolchain install stable
 WORKDIR server
 
 # Server depends on core via a relative import
-COPY core ../core
+COPY core/Cargo.toml /core/Cargo.toml
+COPY core/Cargo.lock /core/Cargo.lock
 
 # Required to get cargo to get and compile deps but not our source
 # https://blog.mgattozzi.dev/caching-rust-docker-builds/
+COPY containers/dummy.rs /core/src/lib.rs
+
 COPY containers/dummy.rs src/main.rs
 COPY server/Cargo.toml .
 COPY server/Cargo.lock .
@@ -19,9 +22,11 @@ RUN cargo build --release
 
 # Build our source
 COPY server .
+COPY core /core
 
 # Cargo thinks this file hasn't changed on the filesystem
 RUN touch src/main.rs
+RUN touch /core/src/lib.rs
 RUN cargo build --release
 
 # Check formatting
