able to make tools disappear with tap, has fullscreen, and correctly working buttons

--- a/clients/android/app/src/main/AndroidManifest.xml
+++ b/clients/android/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
             android:theme="@style/Main.NoActionBar" />
         <activity
             android:name=".screen.HandwritingEditorActivity"
-            android:theme="@style/Main.NoActionBar" />
+            android:theme="@style/Main.FullScreen" />
         <activity android:name=".screen.ListFilesActivity" />
         <activity android:name=".screen.SettingsActivity" />
         <activity android:name=".screen.TextEditorActivity" />
