--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -15,6 +15,7 @@ bench = false
 aead = "0.2.0"
 aes-gcm = "0.5.0"
 base64 = "0.11.0"
+basic-human-duration = "0.1.2"
 bincode = "1.2.1"
 chrono = "0.4.15"
 diffy = "0.2.0"
